header transition effect

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
 	background-color: orange;
 }
 header {
+	transition: background 5s ease;
 	background-color: rgba(0,0,0, 0.8);
 	display: flex;
 	justify-content: center;
