--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
 	background-color: orange;
 }
+
+/*header*/
 header {
 	transition: background 5s ease;
 	background-color: rgba(0,0,0, 0.8);
@@ -33,7 +35,17 @@ header .nav-ul li a {
 	text-decoration: none;
 	margin: 15px; 
 }
-.title {
+/*end of header*/
+
+/*main*/
+main {
+	display: flex;
+	justify-content: center;
+}
+.main-wrapper {
+	width: 90%;
+}
+h1 {
 	color: white;
 	font-size: 30px;
 	margin: 30px auto auto 30px;
@@ -41,3 +53,35 @@ header .nav-ul li a {
 .lorem1 {
 	margin: 30px auto auto 30px;	
 }
+/*latest news section*/
+.last-news {
+	margin-top: 50px;
+}
+.last-news h2 {
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+.last-news .news-wrapper {
+	display: flex;
+	margin-top: 20px;
+	justify-content: space-around;
+}
+.last-news blockquote {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 35%;
+}
+.last-news blockquote img {
+	width: 350px;
+	margin: 20px 0;
+}
+.last-news h3 {
+	font-size: 18px;
+}
+
+/*latest news section*/
+
+/*end of main*/
